# SimpleATM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
db/: bank  data.sqlite
src/: ATMapi.cpp  ATMapi.h  database.cpp  database.h
tests/: main.cpp
